<resources>
    <string name="app_name">MacQuest</string>

    <string name="access_token_wiser">pk.eyJ1Ijoid2lzZXIiLCJhIjoiY2o1ODUyNjZuMTR5cjJxdGc1em9qaWV4YyJ9.x-VFKxrs3xr7Zy8NnpKs6A</string>
    <string name="style_mac_wiser">mapbox://styles/wiser/cj585uhjo4ouu2rrowwv31lib</string>

    <string name="welcome">Welcome to MacQuest</string>

    <string name="map">Map</string>

    <string name="building_directory">Building Directory</string>

    <string name="nearest_washroom">Nearest Washroom</string>

    <string name="bus_schedule">Bus Schedule</string>

    <string name="settings">Settings</string>

    <string name="about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="delete_history">Clear History</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="show_on_map">Show on Map</string>

    <string name="search_room">Search for a Room…</string>

    <string name="search_building">Search for a Building…</string>

    <string name="search_bus_stop">Search for a Bus Stop…</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="location">Toggle Location</string>
    <string name="washrooms">Toggle Washrooms</string>
    <string name="stairs_and_elevators">Toggle Stairs and Elevators</string>
    <string name="floor_7">7</string>
    <string name="floor_6">6</string>
    <string name="floor_5">5</string>
    <string name="floor_4">4</string>
    <string name="floor_3">3</string>
    <string name="floor_2">2</string>
    <string name="floor_1">1</string>
    <string name="floor_b">B</string>
    <string name="floor_2b">2B</string>

    <string name="book_this_room">BOOK THIS ROOM</string>

    <string name="placeholder_text_room_name">203A</string>
    <string name="placeholder_text_building_name">Information Technology Building</string>

    <string name="next_bus">Get Next Bus</string>
    <string name="about_title">About</string>

    <string name="macquest_info">MacQuest is an app developed by the Wireless System Research Group (WiSeR) from the Department of Computing and Software, McMaster University.
        It provides on-campus navigation and other campus-related services to visitors to McMaster University, McMaster students, staff and faculty.</string>
    <string name="info_close">Close</string>

    <string name="empty_geojson"> { "type": "FeatureCollection","features": [] }</string>
    <string name="empty_geojson2"> {"type":"FeatureCollection","features":[{"type":"Feature","properties":{},"geometry":{"type":"LineString","coordinates":[]}}]}</string>
    <string name="avoid_indoor_pathways">Avoid Indoor Pathways</string>

    <string name="parking_availability">Parking Availability</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="efrt_description">The Emergency First Response Team (EFRT) is an MSU-run service that works alongside McMaster Security Services and repsonds to all medical emergencies on campus.</string>
    <string name="campus_security_description">For on-campus emergencies, contact McMaster University\'s Campus Security here.</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="dial_mcmaster_security">Dial McMaster Security</string>
    <string name="swhat_description">The Student Walk Home Attendant Team (SWHAT) is an MSU service that will escort anyone to any location within a 30 minute radius of campus.</string>
    <string name="swipe_left_to_get_started">Swipe left to get started</string>
    <string name="developed_by">Developed by Qiang Xu,Eric Tran, Chen Zhu, Steve Gong, Arooj Ahmed, Zheng Chen, Xiang Xiao, and Tianwei Liu under the supervision of Dr. Rong Zheng.</string>
    <string name="open_source">Open Source: <a href="http://spdb.cas.mcmaster.ca/support/ossi">http://spdb.cas.mcmaster.ca/support/ossi</a></string>
    <string name="user_agreement">User Agreement: <a href="http://spdb.cas.mcmaster.ca/support/agreement">http://spdb.cas.mcmaster.ca/support/agreement</a></string>
    <string name="show_stop_on_map">Show Stop on Map</string>
    <string name="use_the_search_bar_to_find_any_room_building_or_lecture_hall_on_campus">Use the search bar to find any room, building, or lecture hall on campus</string>
    <string name="click_the_arrow_below_to_get_started">Click the arrow below to get started</string>
    <string name="instantly_find_where_you_are_with_the_location_finder">Instantly find where you are with the location finder</string>
    <string name="toggle_the_indoor_map_layer_with_the_selection_buttons">Toggle the indoor map layer with the selection buttons</string>

    <string name="scan_qr_code">Scan Event QR Code</string>
    <string name="scan_qr_code_no_result">No QR Code Founded.</string>

    <string name="send_loc_permission_descript">Send location data to server for a heatmap. Location data is entirely anonymous (no other phone data is kept besides GPS coordinates).</string>
    <string name="send_loc_permission_label">Send location data to MacQuest servers</string>

    <string name="SERVER_permission_description">Send Anonymous Location Data to MacQuest Servers for Event Analytics</string>
    <string name="SERVER_permission_label">Server Related Permissions</string>
    <string name="campus_event">Campus Events</string>

    <string name="update_map">Update Map</string>
    <string name="update_database">Update Database</string>
    <string name="new_version">New Version!</string>
    <string name="title_activity_event_web_page">EventWebPageActivity</string>
    <string name="btn_close_ar">Close AR</string>
    <string name="text_recalibration_prompt">Please lower your phone for recalibration to occur.</string>

</resources>
