<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/toggle_the_indoor_map_layer_with_the_selection_buttons"/>

    <LinearLayout
        android:id="@+id/floor_level_buttons"
        android:layout_width="@dimen/button_dimen"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="false"
        android:orientation="vertical">

        <Button
            android:id="@+id/level_button_three"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:background="@color/colorPrimary"
            android:text="@string/floor_3"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/level_button_two"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:background="@color/colorPrimary"
            android:text="@string/floor_2"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/level_button_one"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:background="@color/colorPrimary"
            android:text="@string/floor_1"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/level_button_zero"
            android:layout_width="@dimen/button_dimen"
            android:layout_height="@dimen/button_dimen"
            android:background="@color/colorPrimary"
            android:text="@string/floor_b"
            android:textColor="@color/colorAccent" />

    </LinearLayout>



</LinearLayout>