<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/floating_search_view_gap"
    tools:context="com.mcmaster.wiser.idyll.view.InfoFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/macquest_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_margin"
        android:padding="@dimen/cardview_margin"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/cardview_margin"
                android:text="@string/about_title"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/macquest_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin"
                android:text="@string/developed_by" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin"
                android:autoLink="web"
                android:text="@string/open_source" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin"
                android:autoLink="web"
                android:text="@string/user_agreement" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin"
                android:text="\u00a9 2017 WiSeR Lab" />

            <Button
                android:id="@+id/info_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/transparent"
                android:text="@string/info_close"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>