<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/floating_search_view_gap"
    tools:context="com.mcmaster.wiser.idyll.view.InfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/info_card_efrt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_margin"
                android:padding="@dimen/cardview_margin"
                app:cardCornerRadius="@dimen/cardview_default_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Emergency First Response Team"
                        android:layout_marginBottom="@dimen/cardview_margin"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/efrt_description"/>

                    <Button
                        android:id="@+id/emergency_efrt_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@color/transparent"
                        android:text="call efrt now"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/info_emergency_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_margin"
                android:padding="@dimen/cardview_margin"
                app:cardCornerRadius="@dimen/cardview_default_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emergency_contacts"
                        android:layout_marginBottom="@dimen/cardview_margin"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/campus_security_description"/>

                    <Button
                        android:id="@+id/emergency_contacts_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@color/transparent"
                        android:text="@string/dial_mcmaster_security"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/info_swhat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardview_margin"
                android:padding="@dimen/cardview_margin"
                app:cardCornerRadius="@dimen/cardview_default_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Student Walk Home Attendant Team"
                        android:layout_marginBottom="@dimen/cardview_margin"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/swhat_description"/>

                    <Button
                        android:id="@+id/emergency_swhat_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@color/transparent"
                        android:text="Call SWHAT now"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>