<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mcmaster.wiser.idyll.view.BusFragment">

    <!--android:layout_marginTop="?attr/actionBarSize"-->

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/floating_search_view_gap"
        tools:context="com.mcmaster.wiser.idyll.view.MainActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_margin"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bus_schedule"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="Find nearest bus stop"
                        android:textColor="@color/colorPrimary"
                        android:visibility="gone"/>

                    <Spinner
                        android:id="@+id/bus_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bus_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:text="@string/next_bus"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/bus_show_on_map_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:text="@string/show_stop_on_map"

                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/recycler_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_margin"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/bus_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:scrollbars="vertical" />

        </android.support.v7.widget.CardView>

    </LinearLayout>
</FrameLayout>
